# WebHomework_2

./: Dockerfile  README.md  classes.py  func.py  main.py  pyproject.toml
